# archive-pdf-urls

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker_build.yml  publish_crate.yml  test_and_check.yml
src/: main.rs
waybackmachine-client/: Cargo.toml  README.md
waybackmachine-client/src/: archivableurl.rs  errors.rs  lib.rs
waybackmachine-client/tests/: archive.rs  url.rs
