[package]
name = "waybackmachine-client"
version = "0.1.0"
authors = ["Javier Arias <javi@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Client to archive URLs in the Internet Archive's Wayback Machine"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.24"}
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
url = "2.5.0"
