[package]
name = "waybackmachine-client"
version = "0.4.0"
authors = ["Javier Arias <javi@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Client to archive URLs in the Internet Archive's Wayback Machine"
repository = "https://github.com/thoth-pub/archive-pdf-urls/"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.24"}
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
