[package]
name = "waybackmachine-client"
version = "0.4.0"
authors = ["Javier Arias <javi@thoth.pub>"]
edition = "2021"
license = "Apache-2.0"
description = "Client to archive URLs in the Internet Archive's Wayback Machine"
repository = "https://github.com/thoth-pub/archive-pdf-urls/"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
url = "2.5.1"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
